The previous two style files were saved in one file and changes were made in the structure of the form

--- a/bodys/form-1.html
+++ b/bodys/form-1.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-compatible" content="ie=edge">
     <link rel="stylesheet" href="../fonts/font-face.css">
     <link rel="stylesheet" href="../style/form/reset.css">
-    <link rel="stylesheet" href="../style/form/style-1.css">
-    <title>فرم ثبت نام</title>
+    <link rel="stylesheet" href="../style/form/style-form.css">
+    <title>فرم عضویت</title>
 </head>
 
 <body>
@@ -41,6 +41,7 @@
                 <button class="btn btn-vorod">ثبت نام</button>
 
                 <a href="./index.html"><input class="btn exit" type="button" value="خروج"></a>            </div>
+            </div>
         </form>
 
     </div>
