--- a/bodys/form-2.html
+++ b/bodys/form-2.html
@@ -27,8 +27,8 @@
                 <input type="password" name="password" minlength="8">
             </div>
             <div class="btn">
-                <a href="./form-2.html"><input class="btn sabt" type="button" value="ورود"></a>
-                <button class="btn btn-vorod">ثبت نام</button>
+                <a href="./form-1.html"><input class="btn sabt" type="button" value="ثبت نام"></a>
+                <button class="btn btn-vorod">ورود</button>
 
                 <a href="./index.html"><input class="btn exit" type="button" value="خروج"></a>            </div>
             </div>
