--- a/bodys/Home.html
+++ b/bodys/Home.html
@@ -5,9 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="../style/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../style/css/customCss.css">
     <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="../fonts/font-face.css">
     <title>Home</title>
@@ -15,17 +12,21 @@
 
 <body class="vazir">
     <div>
-        <header class="header sticky-top">
-            <div class="item">
-                <a class="text" href="./index.html">صفحه اصلی </a>
-                <a class="text" href="#">کتاب های برتر </a>
-                <a class="text" href="#">خرید </a>
-                <a class="text" href="#">مقالات و جستار ها </a>
-                <a class="text" href="#">ارتباط با ما </a>
+
+        <header class="head">
+            <div class="item-r">
+                <a  class="text" href="./index.html">صفحه اصلی </a>
+                <a  class="text" href="#">محصولات</a>
+                <a  class="text" href="#">سبد خرید</a>
+                <a  class="text" href="#">ارتباط با ما </a>
             </div>
-            <div class="form">
-                <a href="./form-2.html"><input class="input" type="submit" value="ورود"></a>
-                <a href="./form-1.html"><input class="input" type="submit" value="عضویت"></a>
+            <div class="item-l">
+                <a class="text" href="./form-2.html">
+                    <input class="btn btn-vorod" type="submit" value="ورود">
+                </a>
+                <a class="text" href="./form-1.html">
+                    <input class="btn btn-sabt" type="submit" value="عضویت">
+                </a>
             </div>
         </header>
 
