folder and file is chenged

--- a/bodys/form-1.html
+++ b/bodys/form-1.html
@@ -40,7 +40,7 @@
                 <a href="./form-2.html"><input class="btn sabt" type="button" value="ورود"></a>
                 <button class="btn btn-vorod">ثبت نام</button>
 
-                <a href="./index.html"><input class="btn exit" type="button" value="خروج"></a>            </div>
+                <a href="./Home.html"><input class="btn exit" type="button" value="خروج"></a>            </div>
             </div>
         </form>
 
