--- a/bodys/form-2.html
+++ b/bodys/form-2.html
@@ -30,7 +30,7 @@
                 <a href="./form-1.html"><input class="btn sabt" type="button" value="ثبت نام"></a>
                 <button class="btn btn-vorod">ورود</button>
 
-                <a href="./index.html"><input class="btn exit" type="button" value="خروج"></a>            </div>
+                <a href="./Home.html"><input class="btn exit" type="button" value="خروج"></a>            </div>
             </div>
         </form>
     </div>
