make the box mahsol

--- a/bodys/Home.html
+++ b/bodys/Home.html
@@ -13,18 +13,19 @@
 <body class="vazir">
     <div>
 
-        <header class="head">
+        <header>
+
             <div class="item-r">
-                <a  class="text" href="./index.html">صفحه اصلی </a>
-                <a  class="text" href="#">محصولات</a>
-                <a  class="text" href="#">سبد خرید</a>
-                <a  class="text" href="#">ارتباط با ما </a>
+                <a class="link" href="./index.html">صفحه اصلی </a>
+                <a class="link" href="#">محصولات</a>
+                <a class="link" href="#">سبد خرید</a>
+                <a class="link" href="#">ارتباط با ما </a>
             </div>
             <div class="item-l">
-                <a class="text" href="./form-2.html">
+                <a class="link" href="./form-2.html">
                     <input class="btn btn-vorod" type="submit" value="ورود">
                 </a>
-                <a class="text" href="./form-1.html">
+                <a class="link" href="./form-1.html">
                     <input class="btn btn-sabt" type="submit" value="عضویت">
                 </a>
             </div>
@@ -32,14 +33,99 @@
 
 
         <h2>وب سایت رسمی فروش کتاب های چاپ قدیم</h2>
-<p>ما در این وب سرویس قصد داریم تا کتاب های شما را خریداری کرده و کتاب های چاپ قدیم را در اختیار علاقه مندان قرار دهیم</p>
+        <p class="text">ما در این سایت قصد داریم تا Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Perspiciatis ipsum odit accusantium omnis molestiae facilis cupiditate, quod cum nostrum, nesciunt sapiente.
+            Laboriosam expedita doloribus iure mollitia doloremque provident qui officia. Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Sit, veritatis quia ipsam veniam accusamus eum soluta id iusto alias eligendi
+            voluptates optio quo, doloremque iure quae laborum deserunt? Omnis, corporis.</p>
+    </div>
+    <div class="mahsol">
+
+        <div class="box">
+            <div class="I-2">
+            </div>
+            <div class="text-box">
+                <span>نام کتاب :</span>
+                <span>مبانی ارتباطات جمعی</span>
+
+                <span>نویسنده :</span>
+                <span>محمد دادگران</span>
+
+                <span>تعداد صفحات :</span>
+                <span>200 صفحه</span>
+
+                <span>جنس و ابعاد :</span>
+                <span>شومیز - وزیری</span>
+
+                <span>موضوع :</span>
+                <span>جامعه شناسی</span>
+
+                <span>قیمت قدیم :</span>
+                <span>16000 تومان</span>
+
+                <span>قیمت جدید :</span>
+                <span>90000 تومان</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="I-2">
+            </div>
+            <div class="text-box">
+                <span>نام کتاب :</span>
+                <span>مبانی ارتباطات جمعی</span>
+
+                <span>نویسنده :</span>
+                <span>محمد دادگران</span>
+
+                <span>تعداد صفحات :</span>
+                <span>200 صفحه</span>
+
+                <span>جنس و ابعاد :</span>
+                <span>شومیز - وزیری</span>
+
+                <span>موضوع :</span>
+                <span>جامعه شناسی</span>
+
+                <span>قیمت قدیم :</span>
+                <span>16000 تومان</span>
+
+                <span>قیمت جدید :</span>
+                <span>90000 تومان</span>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="I-2">
+            </div>
+            <div class="text-box">
+                <span>نام کتاب :</span>
+                <span>مبانی ارتباطات جمعی</span>
+
+                <span>نویسنده :</span>
+                <span>محمد دادگران</span>
+
+                <span>تعداد صفحات :</span>
+                <span>200 صفحه</span>
+
+                <span>جنس و ابعاد :</span>
+                <span>شومیز - وزیری</span>
+
+                <span>موضوع :</span>
+                <span>جامعه شناسی</span>
+
+                <span>قیمت قدیم :</span>
+                <span>16000 تومان</span>
+
+                <span>قیمت جدید :</span>
+                <span>90000 تومان</span>
+            </div>
+        </div>
+
+
+
     </div>
 
-
-
-    
 </body>
-<script src="../style/js/jquery-3.6.0.min.js"></script>
-<script src="../style/js/bootstrap.min.js"></script>
 
 </html>
