--- a/bodys/form-2.html
+++ b/bodys/form-2.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../style/form/reset.css">
     <link rel="stylesheet" href="../style/form/style-form.css">
     <link rel="stylesheet" href="../fonts/font-face.css">
+    <link rel="stylesheet" href="../style/style_sass/style-scss.css">
     <title>فرم ورود</title>
 </head>
 
