add btn for commodities

--- a/bodys/Home.html
+++ b/bodys/Home.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/Home/style.css">
     <link rel="stylesheet" href="../fonts/font-face.css">
-    <link rel="stylesheet" href="../style/style_sass/style-scss.css">
-    <title>Home</title>
+    <link rel="stylesheet" href="../style/scss/style-scss.css">
+    <title>صفحه اصلی</title>
 </head>
 
 <body class="vazir">
@@ -220,16 +220,17 @@
 
 
     </div>
-    <article>
-        <h4>article is exist</h4>
-        <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem excepturi tempore perferendis ipsa culpa
-            quibusdam dolor ducimus, eum praesentium, harum, atque architecto. Voluptatem enim odio quis ratione? Harum,
-            dicta nesciunt!
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente vitae atque fugit distinctio totam fugiat
-            earum veniam molestias consequatur nemo velit culpa, illum voluptate nulla pariatur minus aut dolorum
-            excepturi.
-        </p>
-    </article>
+
+<div class="btn-s">
+    <a href="./commodities.html">
+        <button class="btn-clik" type="submit">sayer mahsolat</button>
+    </a>
+</div>
+
+<footer>
+    
+
+</footer>
 </body>
 
 </html>
